<resources>

    <string name="app_name">Global Chat</string>
    <string name="login_title">Login</string>
    <string name="create_new_account">Create new account</string>

    <string-array name="array_language">
        <item>Portuguese</item>
        <item>English</item>
        <item>Franch</item>
    </string-array>

    <!--<string name="preferences_file_key">com.chat.global.globalchat.USER_PREFS_KEY</string>-->
    <!--<string name="token_key">TOKEN_KEY</string>-->
    <string name="dialog_time_out_title">Sorry... We had an error.</string>
    <string name="dialog_time_out_message">Please, try again in a fill seconds</string>
    <string name="dialog_logging_in">Logging in...</string>
    <string name="dialog_registering_account">Registering...</string>

    <string name="log_in_button">Log In</string>
    <string name="option_log_out">Log Out</string>
    <string name="option_picture">Set Profile Picture</string>

    <string name="search_user">search_user</string>
    <string name="user_not_found">Not found.</string>
    <string name="find_contact_search_hint">Find a contact</string>
    <string name="user_name_key">user_name_key</string>

    <string name="broad_cast_user_data_change">broad_cast_user_data_change</string>
    <string name="have_no_account">Don\'t you have an account?</string>
    <string name="btn_create_account">Create account</string>
    <string name="toast_log_in_with_your_new_account">Log in with your new account!</string>
    <string name="toast_fill_out_all_fields">Please, fill out all the fields!</string>
    <string name="toast_account_successfully_created">Account successfully created!</string>
    <string name="toast_an_error_accured">An error occurred :/</string>
    <string name="toast_login_account_not_found">Account not found.</string>
    <string name="toast_we_are_having_server_issues">Sorry, we are having server issues. Please, try again later.</string>
    <string name="toast_no_internet_connection">No internet connection.</string>
    <string name="no_internet_connection">Oops... Check your connection and try again.</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_number_hint">2334456677</string>
    <string name="country_code">Country</string>
    <string name="country_code_hint">+1</string>
    <string name="code">code</string>
    <string name="send_number">Send</string>
    <string name="verify_code">Verify</string>
    <string name="verification_code">Verification code</string>
    <string name="warn_insert_phone_number">Insert the phone number.</string>
    <string name="warn_insert_verif_code">Inform the verification code.</string>
    <string name="warn_insert_code_correctly">Code must have 6 digits.</string>
    <string name="warn_code_sent">You will receive a verification code...</string>
    <string name="warn_inform_code">Inform the verification code you wil receive!</string>
    <string name="choose_contact_title">Choose contact</string>
    <string name="choose_contact_subtitle"> contacts</string>
    <string name="chat_id_intent_key">chat_id</string>
    <string name="user_id_intent_key">user_id</string>
    <string name="please_send_code_again">Please send the code again.</string>
    <string name="code_time_out">Timeout! Please, check your connection and try again.</string>
    <string name="user_name_intent">user_name</string>
    <string name="choose_a_profile_picture">Choose a profile picture</string>
    <string name="choose_picture_button">Choose Picture</string>
    <string name="done_button">Done</string>
    <string name="image_byte_array">image_byte_array</string>
    <string name="no_chat_yet">You don\'t have a chat yet.</string>
    <string name="retry">Retry</string>
    <string name="verification_code_example">123456</string>
    <string name="NEW_CHAT_CREATED">new_chat</string>
    <string name="preference_file_key">preference_file_key</string>
    <string name="uid_key">uid_key</string>
    <string name="test1">+16501111234</string>
    <string name="widget_no_message_to_display">No message to display.</string>
    <string name="widget_no_message_three_dots">...</string>
    <string name="exit_app_content_description">Exit app.</string>
    <string name="send_phone_number_content_description">Send phone number to verification.</string>
    <string name="fab_content_description">Create new chat.</string>
    <string name="insert_phone_number">Insert phone number.</string>
    <string name="insert_country_code">Insert country code.</string>
    <string name="loading_warning">Loading...</string>
    <string name="picture_of_the_chat">Picture of the chat.</string>
    <string name="user_s_profile_picture">User\'s profile picture.</string>
    <string name="insert_the_verification_code_received">Insert the verification code received:</string>
    <string name="insert_the_received_verification_code_here">Insert the received verification code here.</string>
    <string name="send_the_message">Send the message.</string>
    <string name="picture_of_the_contact">Picture of the contact.</string>


</resources>

