<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfilePictureActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/choose_profile_picture_margin"
        android:layout_marginTop="@dimen/choose_profile_picture_margin"
        android:layout_marginEnd="@dimen/choose_profile_picture_margin"
        android:text="@string/choose_a_profile_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline13" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="@dimen/circle_image_width"
        android:layout_height="@dimen/circle_image_width"
        android:layout_marginStart="@dimen/circle_image_margin_start"
        android:layout_marginTop="@dimen/profile_circle_img_margin_top"
        android:layout_marginEnd="@dimen/profile_circle_img_margin_end_right"
        android:layout_marginRight="@dimen/profile_circle_img_margin_end_right"
        android:layout_marginBottom="@dimen/profile_circle_img_margin_bottom"
        android:src="@drawable/ic_person"
        app:srcCompat="@drawable/ic_person"
        app:layout_constraintBottom_toTopOf="@+id/btn_profile_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:src="@drawable/ic_person"
        android:contentDescription="@string/user_s_profile_picture"/>

    <Button
        android:id="@+id/btn_profile_picture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/btn_profile_picture_start"
        android:layout_marginLeft="@dimen/btn_profile_picture_start"
        android:layout_marginEnd="@dimen/btn_profile_picture_end"
        android:layout_marginRight="@dimen/btn_profile_picture_end"
        android:layout_marginBottom="@dimen/btn_profile_picture_bottom"
        android:background="@drawable/button_background"
        android:textColor="@color/buttonTextColor"
        android:textAllCaps="false"
        android:text="@string/choose_picture_button"
        android:onClick="onChooseImage"
        app:layout_constraintBottom_toTopOf="@+id/btn_done"
        app:layout_constraintEnd_toStartOf="@+id/guideline16"
        app:layout_constraintStart_toStartOf="@+id/guideline15" />

    <Button
        android:id="@+id/btn_done"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/btn_picture_done_margin_start"
        android:layout_marginLeft="@dimen/btn_picture_done_margin_start"
        android:layout_marginEnd="@dimen/btn_picture_done_margin_end"
        android:layout_marginRight="@dimen/btn_picture_done_margin_end"
        android:layout_marginBottom="@dimen/btn_picture_done_margin_bottom"
        android:onClick="onSendImage"
        android:background="@drawable/button_background"
        android:textColor="@color/buttonTextColor"
        android:textAllCaps="false"
        android:text="@string/done_button"
        app:layout_constraintBottom_toTopOf="@+id/guideline14"
        app:layout_constraintEnd_toStartOf="@+id/guideline16"
        app:layout_constraintStart_toStartOf="@+id/guideline15" />

    <include
        android:id="@+id/include_profile_picture_no_connection"
        layout="@layout/no_connection_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/profile_pic_no_connection_include_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>